k8s/istio/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    # Enable automatic sidecar injection cho namespace này
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    # Enable automatic sidecar injection cho namespace này
    istio-injection: enabled
